<resources>
    <string name="app_name">Reading7</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="explore_title">הספריה</string>
    <string name="search_tab1">ספרים</string>
    <string name="search_tab2">סופרים</string>
    <string name="search_tab3">חברים</string>
    <string name="search_hint">חפש ספר, סופר או חבר</string>
    <string name="wishlist_post_title">הוסיף לרשימת המשאלות את הספר</string>
    <string name="signup_suggestion">עדיין לא רשום? הצטרף כעת</string>
    <string name="login">התחבר</string>
    <string name="email">אימייל</string>
    <string name="password">סיסמה</string>
    <string name="enter_details">הכנס פרטים</string>
    <string name="wrong_details">פרטי התחברות שגויים</string>
    <string name="no_internet">אין חיבור לאינטרנט</string>
    <string name="already_logged">משתמש זה מחובר במכשיר אחר</string>
    <string name="signup">הרשמה</string>
    <string name="school_name">בית ספר</string>
    <string name="age">תאריך לידה</string>
    <string name="user_name">שם משתמש</string>
    <string name="welcome">ברוכים הבאים</string>
    <string name="illegal_name">אנא בחר שם משתמש שמורכב מאותיות בעברית</string>
    <string name="illegal_email">כתובת האימייל לא חוקית</string>
    <string name="illegal_password">אנא בחר סיסמה שמכילה 6 תווים לפחות</string>
    <string name="illegal_age">אנא הכנס תאריך לידה חוקי</string>
    <string name="illegal_school">אנא בחר בית ספר מהרשימה</string>
    <string name="email_exists">כתובת האימייל כבר קיימת במערכת</string>
    <string name="my_wishlist">רשימת המשאלות שלי</string>
    <string name="edit">עריכה</string>
    <string name="my_books">ספרים שקראתי</string>
    <string name="three_big">שלושת הגדולים שלי</string>
    <string name="first_place">1</string>
    <string name="second_place">2</string>
    <string name="third_place">3</string>
    <string name="recent_searches">חיפושים אחרונים</string>
</resources>